--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,26 @@ footer .wrapper {
   display: block;
 }
 
+.partners .partners__box:nth-child(2) img {
+  transform: translate(2%, 10%);
+}
+
+.partners .partners__box:nth-child(4) img {
+  transform: translate(2%, 10%);
+}
+
+.partners .partners__box:nth-child(5) img {
+  transform: translate(5%, 5%);
+}
+
+.partners .partners__box:nth-child(6) img {
+  transform: translate(5%, 30%);
+}
+
+.partners .partners__box:nth-child(7) img {
+  transform: translate(0%, 35%);
+}
+
 .own-content .inner-wrapper {
   display: flex;
   justify-content: space-between;
@@ -485,6 +505,13 @@ main {
     margin-top: 40px;
   }
 
+  .contacts .contact {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    font-size: 14px;
+  }
+
   .contacts .download {
     display: flex;
     background-color: #184B71;
@@ -505,14 +532,14 @@ main {
     flex-direction: column;
     max-width: calc(100% - 80px);
     padding-left: 40px;
-    row-gap: 35px;
+    row-gap: 50px;
     margin-top: 40px;
   }
 
   .contacts .contact:nth-child(2)::before,
   .contacts .contact:nth-child(2)::after {
     position: absolute;
-    width: 50%;
+    width: 100%;
     height: 1px;
     content: "";
     background: black;
@@ -544,6 +571,61 @@ main {
   .inner-wrapper {
     width: 100%;
     padding: 0;
+  }
+}
+
+@media (min-width: 301px) and (max-width: 499px) {
+  .contacts {
+    color: black;
+    margin-top: 40px;
+  }
+
+  .contacts .contact {
+    flex-direction: column;
+  }
+
+  .contacts .download {
+    display: flex;
+    background-color: #184B71;
+    font-size: 18px;
+    justify-content: center;
+  }
+
+  .contacts .download a {
+    padding: 22px 0;
+    color: #009fe3;
+  }
+
+  .contacts a {
+    color: black;
+  }
+
+  .contacts__box {
+    flex-direction: column;
+    max-width: calc(100% - 80px);
+    padding-left: 40px;
+    row-gap: 50px;
+    margin-top: 40px;
+  }
+
+  .contacts .contact:nth-child(2)::before,
+  .contacts .contact:nth-child(2)::after {
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    content: "";
+    background: black;
+  }
+
+  .contacts .contact:nth-child(2)::before {
+    top: -15px;
+    left: 0;
+  }
+
+  .contacts .contact:nth-child(2)::after {
+    top: auto;
+    bottom: -15px;
+    left: 0;
   }
 }
 
