--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ footer .wrapper {
 }
 
 .own-content .right-block {
-  max-width: 455px;
+  max-width: 463px;
   flex: 1;
   padding-top: 35px;
 }
@@ -187,6 +187,14 @@ footer .wrapper {
 .own-content .right-block p {
   font-size: 11.6px;
   line-height: 134%;
+}
+
+.own-content .right-block p:nth-child(2) {
+  margin-top: 17px;
+}
+
+.own-content .right-block p:nth-child(3) {
+  margin-top: 20px;
 }
 
 .own-content .right-block-head {
