--- a/css/style.css
+++ b/css/style.css
@@ -184,16 +184,16 @@ footer .wrapper {
   padding-top: 35px;
 }
 
-.own-content .right-block p {
+.own-content .right-block .text {
   font-size: 11.6px;
   line-height: 134%;
 }
 
-.own-content .right-block p:nth-child(2) {
+.own-content .right-block .text:nth-child(2) {
   margin-top: 17px;
 }
 
-.own-content .right-block p:nth-child(3) {
+.own-content .right-block .text:nth-child(3) {
   margin-top: 20px;
 }
 
@@ -345,6 +345,7 @@ footer .wrapper {
 
 .contacts .numbers {
   display: flex;
+  margin-top: 2px;
 }
 
 html {
