--- a/css/style.css
+++ b/css/style.css
@@ -449,7 +449,6 @@
   display: flex;
   justify-content: space-between;
   padding-top: 60px;
-  position: relative;
   z-index: 3;
 }
 
@@ -742,20 +741,39 @@ html {
     letter-spacing: -0.01em;
   }
 
-  .archive {
-    background-color: #E30613;
+  .archive__top {
+    background: #E30613;
+  }
+
+  .archive__wrapper {
+    padding: 0;
+  }
+
+  .archive__era {
+    padding-right: 20px;
+    position: absolute;
+    bottom: 40px;
+    left: 20px;
   }
 
   .archive__logo {
     max-width: 160px;
     font-size: 15px;
     padding-top: 50px;
+    padding-left: 20px;
+    padding-bottom: 30px;
   }
 
   .archive__logo:before {
     width: 40px;
     height: 48px;
     top: 0px;
+    left: 20px;
+  }
+
+  .archive__container {
+    padding: 0 20px;
+    padding-bottom: 100px;
   }
 
   .archive__box {
@@ -773,7 +791,12 @@ html {
   }
 
   .archive__item {
+    color: #00ABE3;
     font-size: 16px;
+  }
+
+  .archive__item_active {
+    color: #878787;
   }
 
   .bottom-decor {
