--- a/css/style.css
+++ b/css/style.css
@@ -743,6 +743,7 @@ html {
 
   .archive__top {
     background: #E30613;
+    padding: 0;
   }
 
   .archive__wrapper {
@@ -759,15 +760,15 @@ html {
   .archive__logo {
     max-width: 160px;
     font-size: 15px;
-    padding-top: 50px;
+    padding-top: 25px;
     padding-left: 70px;
-    padding-bottom: 30px;
+    padding-bottom: 25px;
   }
 
   .archive__logo:before {
     width: 40px;
     height: 48px;
-    top: 55px;
+    top: 30px;
     left: 20px;
   }
 
