--- a/src/scss/_archive.scss
+++ b/src/scss/_archive.scss
@@ -100,6 +100,7 @@ $breakpoints: (
 
     &__top {
       background: #E30613;
+      padding: 0;
     }
 
     &__wrapper {
@@ -116,14 +117,14 @@ $breakpoints: (
     &__logo {
       max-width: 160px;
       font-size: 15px;
-      padding-top: 50px;
+      padding-top: 25px;
       padding-left: 70px;
-      padding-bottom: 30px;
+      padding-bottom: 25px;
 
       &:before {
         width: 40px;
         height: 48px;
-        top: 55px;
+        top: 30px;
         left: 20px;
       }
     }
