--- a/src/scss/_partners.scss
+++ b/src/scss/_partners.scss
@@ -16,45 +16,22 @@
     width: fit-content;
     text-decoration: none;
     color: black;
-
-    .partner-position {
-      height: 30px;
-      font-size: 9px;
-      max-width: 140px;
-      display: block;
-    }
-
-
+    display: flex;
+    flex-direction: column;
   }
 
-  .partners__box:nth-child(2) {
-    img {
-      transform: translate(2%, 10%)
-    }
+  &__position {
+    height: 30px;
+    font-size: 9px;
+    max-width: 140px;
+    display: block;
+    flex: 1;
   }
 
-  .partners__box:nth-child(4) {
-    img {
-      transform: translate(2%, 10%)
-    }
-  }
 
-  .partners__box:nth-child(5) {
-    img {
-      transform: translate(5%, 5%);
-    }
-  }
-
-  .partners__box:nth-child(6) {
-    img {
-      transform: translate(5%, 30%);
-    }
-  }
-
-  .partners__box:nth-child(7) {
-    img {
-      transform: translate(0%, 35%);
-    }
+  &__img{
+    flex: 1;
+    object-fit: contain;
   }
 }
 
