fixed contacts offset

--- a/src/scss/_contacts.scss
+++ b/src/scss/_contacts.scss
@@ -148,6 +148,10 @@ $breakpoints: (
       flex-direction: column;
     }
 
+    .contact-question{
+      margin-bottom: 5px;
+    }
+
     .download {
       display: flex;
       background-color: #184B71;
