--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,8 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 21px 0 35px 0;
+  padding: 25px 0 35px 0;
+  min-height: 85px;
   color: black;
   row-gap: 30px;
 }
@@ -102,6 +103,10 @@
   color: black;
   display: flex;
   flex-direction: column;
+}
+
+.partners__box:not(:last-child) {
+  margin-right: 15px;
 }
 
 .partners__position {
@@ -831,6 +836,10 @@ html {
 
   .contacts .contact {
     flex-direction: column;
+  }
+
+  .contacts .contact-question {
+    margin-bottom: 5px;
   }
 
   .contacts .download {
