--- a/src/scss/_partners.scss
+++ b/src/scss/_partners.scss
@@ -6,7 +6,8 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 21px 0 35px 0;
+    padding: 25px 0 35px 0;
+    min-height: 85px;
     color: black;
     row-gap: 30px;
   }
@@ -18,6 +19,11 @@
     color: black;
     display: flex;
     flex-direction: column;
+
+    &:not(:last-child) {
+      margin-right: 15px;
+    }
+
   }
 
   &__position {
@@ -29,7 +35,7 @@
   }
 
 
-  &__img{
+  &__img {
     flex: 1;
     object-fit: contain;
   }
